--- a/web/css/all.css
+++ b/web/css/all.css
@@ -131,7 +131,7 @@ h6,
     font-family: inherit;
     font-weight: 700;
     line-height: 1.1;
-    color: #58595b;
+    color: #142300;
 }
 
 h1 small,
@@ -2992,6 +2992,8 @@ input[type="button"].btn-block {
 
 .nav-tabs > li > a:hover {
     border-color: #c6ccd2 #c6ccd2 #eaebec;
+    background: #6a8c14;
+    font-weight: 600;
 }
 
 .nav-tabs > li.active > a,
@@ -5772,7 +5774,8 @@ span.btn:focus {
 
 .form-category .form-holder {
     position: relative;
-    background: #e8e8e8;
+    /*background: #e8e8e8;*/
+    background: #d8e1c2;
     border-radius: 4px;
     margin: 0 -10px 40px;
     padding: 15px 166px 15px 19px;
@@ -5902,7 +5905,8 @@ span.btn:focus {
 }
 
 .form-category .icon-calendar, .form-category .icon-clock, .time-ranges .icon-clock {
-    color: #888a90;
+    /*color: #888a90;*/
+    color: #2f4f02;
     font-size: 22px;
     cursor: pointer;
     text-indent: -14px;
@@ -6048,7 +6052,8 @@ span.btn:focus {
     height: 7px;
     margin: 1px 2px 0;
     position: relative;
-    background: #9a9da3;
+    /*background: #9a9da3;*/
+    background: #2f4f02;
     border-radius: 7px;
 }
 
@@ -6888,12 +6893,14 @@ span.btn:focus {
     font-size: 15px;
     line-height: 29px;
     text-decoration: none;
-    background: #c6ccd2;
+    /*background: #c6ccd2;*/
+    background: #6a8c14;
 }
 
 .social-networks a:hover {
     text-decoration: none;
-    background: #71808e;
+    /*background: #71808e;*/
+    background: #d8e1c2;
 }
 
 .social-networks a i:before {
@@ -7254,7 +7261,8 @@ span.btn:focus {
 }
 
 .reservation .price {
-    color: #58595b;
+    /*color: #58595b;*/
+    color: #83c71c;
     display: block;
     margin: -3px 0 21px;
     text-align: center;
@@ -7273,7 +7281,8 @@ span.btn:focus {
     font-weight: 600;
     padding: 7px 14px;
     text-transform: none;
-    background: #9a9da3;
+    /*background: #9a9da3;*/
+    background: #83992a;
 }
 
 .reservation .btn-default:hover {
@@ -7438,7 +7447,7 @@ span.btn:focus {
     display: block;
     padding: 4px 34px 1px;
     text-transform: none;
-    background: #c7cdd3;
+    /*background: #c7cdd3;*/
 }
 
 .similar-ads .btn-default:hover {
@@ -8312,7 +8321,8 @@ label {
     color: #ffffff;
     position: relative;
     border-radius: 5px;
-    background: #bcbcbc;
+    /*background: #bcbcbc;*/
+    background: #6a8c14;
     padding: 16px 19px 14px;
 }
 
@@ -8731,8 +8741,10 @@ label {
     color: #58595b;
     margin: 0 0 38px;
     border-radius: 5px;
-    border: #eaebec solid 1px;
+    /*border: #eaebec solid 1px;*/
     padding: 22px 19px 18px 18px;
+    background: #d8e1c2;
+    font-weight: 600;
 }
 
 .form-signup h2 {
@@ -8771,6 +8783,7 @@ label {
     float: left;
     width: 132px;
     margin: 7px 10px 0 0;
+    font-weight: 500;
 }
 
 .form-signup .field-holder {
@@ -8855,7 +8868,8 @@ label {
 .nav-tabs > li > a {
     color: #ffffff;
     text-decoration: none;
-    background: #c6ccd2;
+    /*background: #c6ccd2;*/
+    background: #2f4f02;
     padding: 13px 15px 10px;
 }
 
@@ -8864,6 +8878,7 @@ label {
     padding: 27px 19px 18px;
     border: #eaebec solid 1px;
     border-radius: 0 5px 5px 5px;
+    background: #fff;
 }
 
 .tab-content > .tab-pane {
@@ -10563,7 +10578,8 @@ h1.listing-title a {
 .tabs-aside .nav-tabs > li > a:hover {
     color: #ffffff;
     outline: none;
-    background: #7a7a7a;
+    /*background: #7a7a7a;*/
+    background: #6a8c14;
 }
 
 /* nav-tabs */
@@ -10623,7 +10639,8 @@ h1.listing-title a {
 
 .form-area .form-holder .nav-tabs > li.active > a,
 .form-area .form-holder .nav-tabs > li > a:hover {
-    background: #ffffff;
+    /*background: #ffffff;*/
+    background: #6a8c14;
     border-color: #e6e6e6;
 }
 
@@ -10631,7 +10648,8 @@ h1.listing-title a {
 .form-area .form-holder .nav-tabs > li > a:hover:after {
     left: 0;
     right: 0;
-    background: #ffffff;
+    /*background: #ffffff;*/
+    background: #6a8c14;
     margin: -1px 0 0;
 }
 
@@ -13950,12 +13968,14 @@ h1.listing-title a {
     font-size: 20px;
     line-height: 24px;
     text-decoration: none;
-    background: #c6ccd2;
+    /*background: #c6ccd2;*/
+    background: #2f4f02;
 }
 
 #ui-datepicker-div .ui-datepicker-header .ui-corner-all:hover {
     cursor: pointer;
-    background: #9ba6b0;
+    /*background: #9ba6b0;*/
+    background: #6a8c14;
 }
 
 #ui-datepicker-div .ui-datepicker-header .ui-corner-all:after {
@@ -14020,7 +14040,8 @@ h1.listing-title a {
 
 .ui-datepicker-calendar .ui-state-default.ui-state-hover {
     color: #ffffff;
-    background: #9ba6b0;
+    /*background: #9ba6b0;*/
+    background: #2f4f02;
 }
 
 .ui-datepicker-calendar .ui-datepicker-current-day .ui-state-default {
@@ -14187,15 +14208,19 @@ h1.listing-title a {
     cursor: pointer;
     text-align: center;
     position: absolute;
-    color: #c7cdd3;
-    background: #ffffff;
+    /*color: #c7cdd3;*/
+    /*background: #ffffff;*/
+    color: #fff;
+    background: #2f4f02;
     border-radius: 0 5px 5px 0;
     border: solid #dedede;
     border-width: 0 0 0 1px;
 }
 
 .jcf-select .jcf-select-opener:hover {
-    color: #8e9aa6;
+    /*color: #8e9aa6;*/
+    color: #fff;
+    background-color: #6a8c14;
 }
 
 .jcf-select .jcf-select-opener:after {
@@ -14253,7 +14278,8 @@ body > .jcf-select-drop.jcf-drop-flipped {
     vertical-align: top;
     width: 100%;
     position: relative;
-    background: #f7f7f7;
+    /*background: #f7f7f7;*/
+    background: #d8e1c2;
     font-size: 14px;
     line-height: 17px;
 }
@@ -14294,6 +14320,7 @@ body > .jcf-select-drop.jcf-drop-flipped {
     padding: 9px 38px 9px 19px;
     -webkit-transition: all 0.35s ease;
     transition: all 0.35s ease;
+    background: #fff;
 }
 
 .jcf-list .jcf-option:after {
@@ -14313,7 +14340,8 @@ body > .jcf-select-drop.jcf-drop-flipped {
 
 .jcf-list .jcf-option.jcf-hover {
     color: #ffffff;
-    background: #7a7a7a;
+    /*background: #7a7a7a;*/
+    background: #2f4f02;
 }
 
 .jcf-list .jcf-option.jcf-hover:after {
@@ -14340,6 +14368,8 @@ body > .jcf-select-drop.jcf-drop-flipped {
 
 .jcf-select-drop .jcf-hover,
 .jcf-list-box .jcf-selected {
+    /*color: #000000;*/
+    /*background: #e6e6e6; */
     color: #000000;
     background: #e6e6e6;
 }
