--- a/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/edit_availabilities_prices.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Dashboard/Listing/edit_availabilities_prices.html.twig
@@ -78,14 +78,14 @@
                             {{ form_label(form_prices.weekdays) }}
                             {{ form_widget(form_prices.weekdays) }}
 
-                            {% if ( not timeUnitIsDay ) %}
-                                <h4>{{ 'listing.edit.price.choose_times.title'|trans }}</h4>
-                                <div class="time-ranges">
-                                    {{ form_errors(form_prices.time_ranges) }}
-                                    {{ form_label(form_prices.time_ranges) }}
-                                    {{ form_widget(form_prices.time_ranges) }}
-                                </div>
-                            {% endif %}
+                            {#{% if ( not timeUnitIsDay ) %}#}
+                                {#<h4>{{ 'listing.edit.price.choose_times.title'|trans }}</h4>#}
+                                {#<div class="time-ranges">#}
+                                    {#{{ form_errors(form_prices.time_ranges) }}#}
+                                    {#{{ form_label(form_prices.time_ranges) }}#}
+                                    {#{{ form_widget(form_prices.time_ranges) }}#}
+                                {#</div>#}
+                            {#{% endif %}#}
 
                             <div class="field-row agenda">
                                 {{ form_errors(form_prices.price_custom) }}
