--- a/src/Cocorico/CoreBundle/Resources/views/Form/fields.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Form/fields.html.twig
@@ -426,16 +426,16 @@
 {#
    Time ranges for prices edition
 #}
-{% block _listing_availabilities_prices_time_ranges_widget %}
-    {{ block('_time_ranges_widget') }}
-{% endblock %}
+{#{% block _listing_availabilities_prices_time_ranges_widget %}#}
+    {#{{ block('_time_ranges_widget') }}#}
+{#{% endblock %}#}
 
-{#
-   Time ranges for status edition
-#}
-{% block _listing_availabilities_status_time_ranges_widget %}
-    {{ block('_time_ranges_widget') }}
-{% endblock %}
+{##}
+   {#Time ranges for status edition#}
+{##}
+{#{% block _listing_availabilities_status_time_ranges_widget %}#}
+    {#{{ block('_time_ranges_widget') }}#}
+{#{% endblock %}#}
 
 
 
