--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_header.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_header.html.twig
@@ -41,8 +41,8 @@
                         </button>
                         <!-- page logo -->
                         <a class="navbar-brand" href="{{ path('cocorico_home') }}" tabindex="3">
-                            <img src="{{ asset('images/logo.png') }}" alt="{{ 'nav.home.link'|trans }}" width="190"
-                                 height="39">
+                            <img src="{{ asset('images/logo.png') }}" alt="{{ 'nav.home.link'|trans }}" class="logo_full">
+                            <img src="{{ asset('images/logo_mobile.png') }}" alt="{{ 'nav.home.link'|trans }}" class="logo_mobile">
                         </a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
