--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
@@ -60,6 +60,18 @@
                                 </a>
                             </li>
                         </ul>
+                        <ul class="list-unstyled pull-left">
+                            <li class="title">{{ 'footer.donate'|trans }}</li>
+                            <li>
+                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                    <input type="hidden" name="cmd" value="_s-xclick">
+                                    <input type="hidden" name="hosted_button_id" value="S6VSAMR7NE8JQ">
+                                    <input type="image" src="https://www.paypalobjects.com/fr_FR/FR/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+                                    <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
+                                </form>
+                            </li>
+                        </ul>
+                        
                     </nav>
                 </div>
             </div>
