#21141 FB like button

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -74,6 +74,7 @@
 </head>
 
 <body class="loading {% block theme %}{% endblock %}">
+{% block fb_container %}{% endblock %}
 <!-- allow a user to go to the main content of the page -->
 <noscript>Javascript must be enabled for the correct page display</noscript>
 
