--- a/web/css/all.css
+++ b/web/css/all.css
@@ -8828,7 +8828,7 @@ label {
 .tabset-holder .link-favourit {
     float: right;
     color: #58595b;
-    margin: -43px 0 0;
+    margin: -43px 60px 0 0;
     text-decoration: none;
 }
 
