#21143 design base layout

--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
@@ -2,6 +2,8 @@
 
 <!-- bottom-container -->
 <div class="bottom-container">
+    <div class="container bottom-page">
+    </div>
     <!-- footer-aside -->
     <aside class="aside-footer">
         <div class="container">
