--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Common/_footer.html.twig
@@ -2,7 +2,9 @@
 
 <!-- bottom-container -->
 <div class="bottom-container">
-    <div class="container bottom-page">
+    <div class="bottom-page-wrapper">
+        <div class="container bottom-page">
+        </div>
     </div>
     <!-- footer-aside -->
     <aside class="aside-footer">
