--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
@@ -24,7 +24,7 @@
             <div class="visual text-center">
                 <div class="container">
                     <div class="row main-banner">
-                        <div class="col-xs-12 col-lg-8 col-lg-push-2">
+                        <div class="col-xs-12 col-lg-12">
                             <div class="title-holder">
                                 <div class="title-frame">
                                     <h1>
