--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/new.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/new.html.twig
@@ -227,8 +227,17 @@
                                                     }) }}
                                                 </div>
                                             </div>
-                                        </div>
 
+                                        </div>
+                                        <div class="field-holder">
+                                            {{ form_errors(form.location.phone) }}
+                                            <span class="label">{{ form_label(form.location.phone) }}</span>
+                                            {{ form_widget(form.location.phone, {
+                                                'attr': {
+                                                    'class': "form-control"
+                                                }
+                                            }) }}
+                                        </div>
                                         <p>
                                             <a class="validate-location" href="javascript:void(0)">
                                                 {{ 'listing.location.validate'|trans }}
