--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/ListingResult/form_search.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/ListingResult/form_search.html.twig
@@ -16,10 +16,51 @@
              {% endif %}
          </div>
 
-         <div class="selection-holder">
-             {% include '@CocoricoCore/Frontend/ListingResult/_form_search_characteristics.html.twig' with {
-             'characteristics' : form.characteristics
-             } only %}
+        <div class="text-area">
+            <div class="field-holder">
+                {{ form_errors(form.first_name) }}
+                {{ form_widget(form.first_name, {
+                    'id': 'first_name',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': form.first_name.vars.label|trans
+                    }
+                } ) }}
+            </div>
+        </div>
+
+        <div class="text-area">
+            <div class="field-holder">
+                {{ form_errors(form.last_name) }}
+                {{ form_widget(form.last_name, {
+                    'id': 'last_name',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': form.last_name.vars.label|trans
+                    }
+                } ) }}
+            </div>
+        </div>
+
+        <div class="text-area">
+            <div class="field-holder">
+                {{ form_errors(form.number_of_people) }}
+                {{ form_widget(form.number_of_people, {
+                    'id': 'number_of_people',
+                    'attr': {
+                        'class': 'form-control numbers-only',
+                        'placeholder': form.number_of_people.vars.label|trans
+                    }
+                } ) }}
+            </div>
+        </div>
+
+         <div class="selection-holder text-area">
+             {#
+                 {% include '@CocoricoCore/Frontend/ListingResult/_form_search_characteristics.html.twig' with {
+                 'characteristics' : form.characteristics
+                 } only %}
+             #}
 
              <div class="select-holder">
                  {{ form_widget(form.sort_by, {
@@ -38,8 +79,8 @@
 
 
 
-         <div class="selection-holder btn-block text-right">
-             <button type="submit" class="btn btn-default" style="padding: 6px 14px 6px;">
+         <div class="text-area">
+             <button type="submit" class="btn btn-default">
                  {{ 'listing.filter'|trans }}
              </button>
          </div>
