--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
@@ -28,7 +28,7 @@
                             <div class="title-holder">
                                 <div class="title-frame">
                                     <h1>
-                                        Bon Appetit
+                                        Bon appetit!
                                     </h1>
                                     <h2>
                                         lorem ipsum
