--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/high_rank.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/high_rank.html.twig
@@ -30,16 +30,6 @@
 
                                             <div class="box">
                                                 <div class="box-holder">
-                                                    <div class="head">
-                                                        <div class="time-price">
-                                                            <strong class="price">{{ price }}</strong>
-
-                                                            <p>
-                                                                {{ vatInclusionText(app.request.getLocale()) }}
-                                                                / {{ (0)|add_time_unit_text }}
-                                                            </p>
-                                                        </div>
-                                                    </div>
                                                     <div class="foot">
                                                         <div class="area">
                                                             <!-- rating -->
@@ -53,26 +43,34 @@
                                                                 </span>
                                                             {% endif %}
                                                         </div>
+                                                        
+                                                        {#
                                                         <strong class="title">
                                                             {% for listingListingCategory in listing.listingListingCategories %}
                                                                 {{ listingListingCategory.category.name }},
                                                             {% endfor %}
                                                         </strong>
+                                                        #}
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
 
                                         <div class="post-content">
+                                            {#
                                             {% set image_user = listing_user.images|length ? listing_user.images[0].name : UserImageConstants.IMAGE_DEFAULT %}
                                             <div class="alignleft">
                                                 <img src="{{ (UserImageConstants.IMAGE_FOLDER ~ image_user) | imagine_filter('user_xsmall') }}"
                                                      alt="{{ listing_user.firstName }}"/>
                                             </div>
+                                            #}
                                             <div class="textbox">
                                                 <h2>{{ listing_translation.title }}</h2>
-
                                                 <p>{{ listing_location.city }} </p>
+                                                <p>{{ vatInclusionText(app.request.getLocale()) }}/ {{ (0)|add_time_unit_text }}</p>
+                                            </div>
+                                            <div class="time-price">
+                                                <strong class="price">{{ price }}</strong>
                                             </div>
                                         </div>
                                     </div>
