#21256 remove site title from SEO title

--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/new.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/new.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain 'cocorico_listing' %}
 
 {%- block meta_title -%}
-    {{ 'listing.new.meta_title'|trans({}, 'cocorico_meta') ~ " - " ~ cocorico_site_name }}
+    {{ 'listing.new.meta_title'|trans({}, 'cocorico_meta') }}
 {%- endblock -%}
 
 {%- block meta_description -%}
