--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Booking/new.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Booking/new.html.twig
@@ -29,7 +29,7 @@
 {% set user_image = user.images|length ? user.images[0].name : UserImageConstants.IMAGE_DEFAULT %}
 
 {%- block meta_title -%}
-    {{ 'booking.new.meta_title'|trans({}, 'cocorico_meta') ~ " " ~ listing_translation.title ~ ", " ~ listing_location.city ~ " - " ~ booking.start|localizeddate('short', 'none', 'fr') ~ ", " ~ booking_duration|add_time_unit_text ~ " : " ~  amount_total ~ " - " ~ cocorico_site_name }} }}
+    {{ 'booking.new.meta_title'|trans({}, 'cocorico_meta') ~ " " ~ listing_translation.title ~ ", " ~ listing_location.city ~ " - " ~ booking.start|localizeddate('short', 'none', 'fr') ~ ", " ~ booking_duration|add_time_unit_text ~ " : " ~  amount_total }} }}
 {%- endblock -%}
 
 {%- block meta_description -%}
