--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Home/index.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {%- block meta_title -%}
-    {{ 'home.meta_title'|trans({}, 'cocorico_meta') ~ " - " ~ cocorico_site_name }}
+    {{ 'home.meta_title'|trans({}, 'cocorico_meta') }}
 {%- endblock -%}
 
 {%- block meta_description -%}
