--- a/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/show.html.twig
+++ b/src/Cocorico/CoreBundle/Resources/views/Frontend/Listing/show.html.twig
@@ -11,7 +11,7 @@
 {% set listing_user = listing.user %}
 
 {%- block meta_title -%}
-    {{ 'listing.show.meta_title'|trans({}, 'cocorico_meta') ~ " " ~ listing_translation.title ~ " - " ~ listing_location.city ~ " - " ~ listing.priceDecimal ~ " " ~ currencySymbol(currentCurrency) ~ "/" ~  0|add_time_unit_text ~ " - " ~ cocorico_site_name }} }}
+    {{ 'listing.show.meta_title'|trans({}, 'cocorico_meta') ~ " " ~ listing_translation.title ~ " - " ~ listing_location.city ~ " - " ~ listing.priceDecimal ~ " " ~ currencySymbol(currentCurrency) ~ "/" ~  0|add_time_unit_text }} }}
 {%- endblock -%}
 
 {%- block meta_description -%}
